# run_n_gun

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_install.cmake  leveledit.cpp  main.cpp
Assets/: Atlas.aseprite  frames.json
Assets/background/: Background1.aseprite
Assets/sprites/: Bird.aseprite  BulletFrog.aseprite  EnergyBar.aseprite  PayerDeathParticle.aseprite  Player.aseprite  WimdyBird.aseprite  generate.sh
editor/: engine.cpp  engine.hpp  inputBox.cpp  inputBox.hpp  level.cpp  level.hpp  main.cpp  pallete.cpp  pallete.hpp  text.cpp  text.hpp  utility.hpp
game/: level.cpp  player.cpp  player.hpp  rect.hpp  sprite.cpp  sprite.hpp
game/core/: bullet.cpp  bullet.hpp  engine.cpp  engine.hpp  entity.hpp  level.cpp  level.hpp  main.cpp  player.cpp  player.hpp  renderer.cpp  renderer.hpp
game/helper/: animations.cpp  animations.hpp  rect.hpp  sound.cpp  sound.hpp  sprite.cpp  sprite.hpp
game/levelObjects/: bird.cpp  bird.hpp  bulletfrog.cpp  bulletfrog.hpp  particle.hpp  pole.cpp  pole.hpp  wimdybird.cpp  wimdybird.hpp
levels/: entitytest.lvl  good.lvl  level.lvl  levelFormat.hexpat  levels.hexproj  test.lvl
libs/glad/: glad.h
shaders/: circleShader.frag  colored.frag  fragmentShader.frag  fragmentShader.vert  transform.vert  vertexShader.vert
shared/: constants.hpp  levelObjects.cpp  levelObjects.hpp  rect.hpp  renderCircle.hpp
tools/: SpriteAnimationConverter.py
